<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字沪关</string>

    <!-- 1 菜单名称 -->
    <!-- 1.1 导航栏菜单项 -->
    <string name="ywl">业务量</string>
    <string name="zfpg">执法评估</string>
    <string name="zxgz">专项工作</string>
    <string name="wdsc">我的收藏</string>

    <!-- 1.2 子菜单项 -->
    <string-array name="tab1menu">
        <item>监管</item>
        <item>保税</item>
        <item>税收</item>
        <item>减免税</item>
        <item>走私违规</item>
    </string-array>
    <string-array name="zfpgMenu">
        <item>税收征管</item>
        <item>加工贸易</item>
        <item>监管查验</item>
        <item>价格管理</item>
        <item>通关效率</item>
    </string-array>
    <string-array name="zxgzMenu">
        <item>通关无纸化</item>
        <item>查验统计日报</item>
    </string-array>

    <!-- 1.3 三级菜单项 -->
    <!-- tab1 -->
    <string-array name="tab1menu1child">
        <item>进出口货物重量</item>
        <item>监管集装箱标准箱总数量</item>
        <item>监管运输工具</item>
        <item>进出境人员</item>
        <item>邮递物品（不含快件）</item>
        <item>邮政、非邮政快件</item>
        <item>统计报关单份数</item>
        <item>统计记录条数</item>
    </string-array>
    <string-array name="tab1menu2child">
        <item>备案加工合同份数</item>
        <item>备案加工合同金额</item>
    </string-array>
    <string-array name="tab1menu3child">
        <item>征收税款(征收关税)</item>
        <item>征收税款(代征税款)</item>
    </string-array>
    <string-array name="tab1menu4child">
        <item>减免关税</item>
        <item>减免代征税</item>
    </string-array>
    <string-array name="tab1menu5child">
        <item>立案走私犯罪案件总数</item>
        <item>立案走私犯罪案件总值</item>
        <item>立案走私行为案件总数</item>
        <item>立案走私行为案件总值</item>
        <item>违反海关监管规定案件</item>
        <item>违反海关监管规定案值</item>
        <item>罚没缴库收入</item>
    </string-array>
    <!-- tab2 -->
    <string-array name="zfpg_sszg_child">
        <item>税收增长率</item>
        <item>后续征补税成效</item>
    </string-array>
    <string-array name="zfpg_jgmy_child">
        <item>报核及时率</item>
        <item>结案及时率</item>
        <item>单耗水平</item>
        <item>手册净重损失水平</item>
        <item>手册增值水平</item>
    </string-array>
    <string-array name="zfpg_jgcy_child">
        <item>查获率(税证)</item>
        <item>查获率(删改\其他)</item>
        <item>进口B类企业查验率离散度</item>
        <item>出口B类企业查验率离散度</item>
        <item>重点查验企业有效率</item>
    </string-array>
    <string-array name="zfpg_jggl_child">
        <item>一般贸易进口空间价格水平</item>
        <item>一般贸易出口空间价格水平</item>
        <item>料件进口空间价格水平</item>
        <item>成品料件内销空间价格水平</item>
        <item>偏低价格记录比重</item>
        <!--
             <item>偏高价格记录比重</item>
        <item>价格大类指标比较</item>
        -->
    </string-array>
    <string-array name="zfpg_tgsx_child">
        <item>海运进口24小时放行率</item>
        <item>海运出口24小时放行率</item>
        <item>非海运进口24小时放行率</item>
        <item>非海运出口24小时放行率</item>
        <item>报关单结关率</item>
    </string-array>
    <string-array name="zxgz_tgwzh_child">
        <item>全关区日报表</item>
    </string-array>
    <string-array name="zxgz_cytjrb_child">
        <item>全关区日报表</item>
    </string-array>

    <!-- 1.4 其他菜单项 -->
    <!-- 税收视角 -->
    <string-array name="taxView">
        <item>评估结果横向比较</item>
        <item>评价得分横向比较</item>
        <item>评估结果时间序列</item>
        <item>评估得分时间序列</item>
    </string-array>
    <string-array name="customs_tgwzh">
        <item>浦东海关</item>
        <item>浦东机场海关</item>
        <item>浦江海关</item>
        <item>洋山海关</item>
        <item>保税区海关</item>
        <item>开发区海关</item>
        <item>奉贤海关</item>
        <item>嘉定海关</item>
        <item>金山海关</item>
        <item>青浦海关</item>
    </string-array>
    <string-array name="customs_inorout">
        <item>进口</item>
        <item>出口</item>
        <item>全部</item>
    </string-array>
    <string-array name="customs_gq">
        <item>浦江海关</item>
        <item>浦东机场</item>
        <item>奉贤海关</item>
        <item>嘉定海关</item>
    </string-array>

    <!-- 1.5 表格 -->
    <string name="table_name_tgwzh">数据表格(通关无纸化)</string>
    <string name="table_name_cybg">数据表格(查验日报)</string>
    <string name="jckdps_title">进出口单票数</string>
    <string name="wzl_title">无纸率</string>
    <string name="jckdl_title">进出口单量</string>
    <string name="gqhm_title">关区号码</string>
    <string name="zb_one_title">组别</string>
    <string name="hgzwzm_title">海关名</string>
    <string name="zb_title">组别\n</string>
    <string name="lshg_title">隶属海关\n</string>
    <string name="gqdm_title">关区代码\n</string>
    <string name="jgs_title">结关数\n</string>
    <string name="jds_title">接单数\n</string>
    <string name="bkcys_title">布控查验数\n</string>
    <string name="bkcysl_title">布控查验率\n</string>
    <string name="bkchs_has_title">布控查获数 \n(含移交缉私,法规)</string>
    <string name="bkchl_has_title">布控查获率 \n(包含移交缉私,法规)</string>
    <string name="bkchs_nhas_title">布控查获数 \n(不含移交缉私,法规)</string>
    <string name="bkchl_nhas_title">布控查获率 \n(不包含移交缉私,法规)</string>

    <!-- 2 通用组建名称 -->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="custom_set">关区选择</string>
    <string name="inorout_set">进出口选择</string>

    <string-array name="inorout_lst">
        <item>进口</item>
        <item>出口</item>
        <item>全部</item>
    </string-array>

    <string name="search_hint">搜索</string>
    <string name="search_text">查询</string>
    <string name="date_from">起始时间</string>
    <string name="date_to">截止时间</string>
    <string name="search_info">无匹配结果</string>
    <string name="sszzl">税收增长率</string>
    <string name="tgwzh">通关无纸化</string>
    <string name="sj">视角</string>
    <string name="jk">进口</string>
    <string name="ck">出口</string>
    <string name="in_or_out">进/出口</string>
    <string name="jckhwzl">进出口货物总量</string>
    <string name="year">年份</string>
    <string name="month">月份</string>
    <string name="count">数量</string>
    <string name="tongbi">当月同比</string>
    <string name="yddy">累计数量</string>
    <string name="yddytb">累计同比</string>
    <string name="zbsm">指标说明</string>
    <string name="sjbgnf">数据表格(年份)</string>
    <string name="sjbgyf">数据表格(月份)</string>
    <string name="sjbgcybg">数据表格(查验日报)</string>
    <string name="zghg">主管海关</string>
    <string name="gq">关区</string>
    <string name="jckbgdzl">进出口报关单总量</string>
    <string name="jckwzbgdps">进出口无纸报关单票数</string>
    <string name="wzl">无纸率</string>
    <string name="allCount">总量</string>
    <string name="favorite">收藏</string>
    <string name="cybg">查验日报</string>
    <string name="zbsm_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; （1）进出口口径：进口；
\n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（2）在数据提取口径中，设定第一（法定）数量（qty_1）≥1的条件是为了剔除成套散件的影响；
\n &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（3）相对于进口应税商品的综合税率和进口价格，数量指数属于数量指数，因此计算时以基期进口应税商品的进口价格和综合税率为同度量因素（权重）；
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（4）数量指数反映的是进口应税商品数量的变化情况。数量指数大于100，则说明数量变化拉动税收增长；数量指数小于100，则说明数量变化导致税收下降；
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（5）数量因素影响值为绝对数，反映进口应税商品数量变化对税收值变化的影响规模。数量因素影响值大于0，表明由于应税商品进口数量的变化拉动税收值增加；数量因素影响值小于0，表明由于应税商品进口数量的变化导致税收值减少；
\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（6）当数量指数（index_q）大于100，数量因素影响值（effect_q）必为正数</string>
    <string name="index_tab2menu1child1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（1）进出口口径：进出口合计；\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（2）关别口径：全国/直属海关；\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（3）税收增长率为百分数，是衡量全国或直属海关税收增长情况的指标。</string>

    <!-- 3 其他 -->
    <string name="max_length_7">适配长度七个字</string>

</resources>