<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/table_one_line_title1"
        style="@style/itemFontColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/hgzwzm_title" />

    <TextView
        android:id="@+id/table_one_line_title2"
        style="@style/itemFontColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/gqhm_title" />

    <TextView
        android:id="@+id/table_one_line_title3"
        style="@style/itemFontColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/jckdl_title" />

    <TextView
        android:id="@+id/table_one_line_title4"
        style="@style/itemFontColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/jckdps_title" />

    <TextView
        android:id="@+id/table_one_line_title5"
        style="@style/itemFontColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/wzl_title" />

</LinearLayout>