<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadingEdge="none"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tgwzh_gqdm"
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gqdm_title" />

            <TextView
                android:id="@+id/tgwzh_jgs"
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/jgs_title" />

            <TextView
                android:id="@+id/tgwzh_jds"
                style="@style/itemFontColor"
                android:layout_width="0dp"
               android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/jds_title" />

            <TextView
                android:id="@+id/tgwzh_bkcys"
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkcys_title" />

            <TextView
                android:id="@+id/tgwzh_bkcyl"
                style="@style/itemFontColor"
                 android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkcysl_title" />

            <TextView
                android:id="@+id/tgwzh_bkchs_baohan"
                style="@style/itemFontColor"
                 android:layout_width="0dp"
               android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkchs_has_title" />

            <TextView
                android:id="@+id/tgwzh_bkchl_baohan"
                style="@style/itemFontColor"
                 android:layout_width="0dp"
               android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkchl_has_title" />

            <TextView
                android:id="@+id/tgwzh_bkchs_buhan"
                style="@style/itemFontColor"
                 android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkchs_nhas_title" />

            <TextView
                android:id="@+id/tgwzh_bkchl_buhan"
                style="@style/itemFontColor"
                 android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bkchl_nhas_title" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/divide_popup" />
   <!-- android:drawSelectorOnTop此属性为true时点击记录不放则记录内容被覆盖掉 -->
        <ListView
            android:id="@+id/table_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:cacheColorHint="@android:color/transparent"
            android:scrollbars="none" />
    </LinearLayout>

</HorizontalScrollView>