<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="none"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/count" />

            <TextView
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tongbi" />

            <TextView
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yddy" />

            <TextView
                style="@style/itemFontColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yddytb" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/divide_popup" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ListView
                android:id="@+id/table_month_data_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@drawable/link"
                android:dividerHeight="2dp"
                android:scrollbars="none" />
        </LinearLayout>
    </LinearLayout>

</HorizontalScrollView>