<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:background="@drawable/zbsm_title"
        android:gravity="center_horizontal" >

        <TextView
            style="@style/titleFontColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/sjbgnf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/zbsm_body"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/itemFontColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/year" />

                <TextView
                    style="@style/itemFontColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/count" />
               
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/divide_popup" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <ListView
                    android:id="@+id/table_year_list"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:scrollbars="none"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@drawable/link"
                    android:dividerHeight="2dp"
                    android:fastScrollEnabled="true"
                    android:focusable="true" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>